change panas to short version, change img of coin, add missing question in panas presurvey

--- a/mindgame/templates/mindgame/bDecision.html
+++ b/mindgame/templates/mindgame/bDecision.html
@@ -86,10 +86,10 @@
     <div class="coin-container">
         <div class="coin" id="coin">
             <div class="heads">
-                <img src="https://svgshare.com/i/oNn.svg">
+                <img src="{% static 'oNn.svg' %}" alt="uszkodzony obraz, skontaktuj się z eksperymentatorem">
             </div>
             <div class="tails">
-                <img src="https://svgshare.com/i/oN5.svg">
+                <img src="{% static 'oN5.svg' %}" alt="uszkodzony obraz, skontaktuj się z eksperymentatorem">
             </div>
         </div>
         <div class="buttons">
