--- a/presurvey/templates/presurvey/cPanas.html
+++ b/presurvey/templates/presurvey/cPanas.html
@@ -3,6 +3,7 @@
 {% load otree  i18n %}
 
 {% block title %}
+    {% trans "How do you feel at this moment ?" %}
 {% endblock %}
 
 {% block content %}
