--- a/presurvey/templates/presurvey/aWelcome.html
+++ b/presurvey/templates/presurvey/aWelcome.html
@@ -14,14 +14,13 @@
 
         <br>By participating in this experiment, you support their research.<br>
 
-        The experiment will take about 20 minutes.<br>
-        Every participant who takes part and answers all questions receives a show-up fee of 5 Zloty.
-        In addition, there is the chance to earn another 5 Zloty during the experiment.<br>
+        The experiment will take about <b>20 minutes</b>.<br>
+        Every participant who takes part and answers all questions receives a <b>show-up fee of 5 Zloty</b>.<br>
+        In addition, there is the <b>chance to earn another 5 Zloty</b> during the experiment.<br>
         The outcome of the experiment has an impact on the study conditions at the Poznan University of
         Economics and Business.<br>
 
         <br><strong>Please do not talk to your fellow students during the experiment.</strong>
-
     {% endblocktrans %}
 
 
