--- a/presurvey/templates/presurvey/dHypoEx1.html
+++ b/presurvey/templates/presurvey/dHypoEx1.html
@@ -3,7 +3,7 @@
 {% load otree  i18n %}
 
 {% block title %}
-
+    {% trans "Hypothetical exercise" %}
 {% endblock %}
 
 {% block content %}
@@ -12,17 +12,22 @@
         This money is earmarked for improving study conditions at this university.
         It can be spent on the following options:<br>
     <br>
-    (I)     A series of presentation by famous entrepreneurs, among them Marek Zmysłowski (firm(s), +1-2 facts).<br>
-    (II)    Access to a collection of standard textbooks in English language (ebooks) for every student.<br>
-    (III)   Scholarships for study abroad (or internship abroad) outside of funded programs (i.e. free mover).<br>
-    (IV)	Installation/Support of a study circle [Here, we need to be more precise].<br>
+    (I)     A series of presentations by well-known entrepreneurs, among them Marek Zmysłowski,
+            Polish-born entrepreneur and co-founder of Rocket Internet, RTB House, OLX and GLOVO and author of
+            the bestseller "Chasing Black Unicorns."<br><br>
+    (II)    Access to a collection of important standard textbooks as ebooks accessible to all
+            students when logged in to the university WiFi. <br><br>
+    (III)   A number of scholarships (600-800 Zloty per student) for study abroad or internship
+            abroad outside of funded programs (so-called free mover).<br><br>
+    (IV)	Financial support of selected Study Circles to support their activities,
+            among others publications and conferences. <br><br>
 
-    <br>How should this money be distributed (in percentage?)<br>
+<br><b>How should this money be distributed (in percentage?)</b><br>
 
-    <br>Please note that your answer is purely hypothetical. It does not have any real-life consequences. <br>
+    <br>Please note that your answer is purely hypothetical. It does not have any real-life consequences.<br>
 
     <br>Please make sure that all of the options below add up to 100.
-    You only need to fill in the number with out the percentage sign "%".
+You only need to fill in the number <b>without</b> the percentage sign "%".
     {% endblocktrans %}
     <br>
 
