--- a/votingGame/templates/votingGame/aIntro.html
+++ b/votingGame/templates/votingGame/aIntro.html
@@ -8,18 +8,26 @@
 
 {% block content %}
     {% blocktrans %}
-        For every participant of today’s experiment, there are 10 Zloty from public sources.
-        This money is earmarked for improving study conditions at the Poznan University of Economics and Business. It can be spent on the following options:
+        <b>For every participant</b> of today’s experiment, there are 10-15 Zloty from public sources.
+        This money is earmarked for improving study conditions at the Poznan University of Economics and Business.
+        It can be spent on the following options:<br><br>
         <ul>
-            <li> A presentation the famous entrepreneur Marek Zmysłowski (firm(s), +1-2 facts) </li>
-            <li> Access to a collection of standard textbooks in English language (ebooks) for every student </li>
-            <li> Scholarships for study abroad (or internship abroad) outside of funded programs (i.e. free mover). </li>
-            <li> Installation/Support of a study circle [Here, we need to be more precise]. </li>
+            <li> A presentation by Marek Zmysłowski, Polish-born entrepreneur and co-founder of Rocket Internet,
+                RTB House, OLX and GLOVO and author of the bestseller "Chasing Black Unicorns." </li><br>
+            <li> Access to a collection of important standard textbooks as ebooks accessible to all students
+                when logged in to the university WiFi.  </li><br>
+            <li> A number of scholarships (600-800 Zloty per student) for study abroad or internship abroad outside
+                of funded programs (so-called free mover). </li><br>
+            <li> Financial support of selected Study Circles to support their activities,
+                among others publications and conferences. </li><br>
         </ul>
-        The question is: What should the 10 Zloty per student be spent on?
-    {% endblocktrans %}
+        The question is: <b>What should the 10-15 Zloty per student be spent on?</b><br><br>
 
-    <br>
+        We randomly divided all participants in today’s experiments into three groups of about equal size. <br>
+        <b>Please do not communicate with each other when answering the upcoming questions.</b><br>
+        If you have problem, please raise your hand so the experimenter can help you.<br>
+
+    {% endblocktrans %}
 
     {% next_button %}
 
