--- a/votingGame/templates/votingGame/cTreatmentVote.html
+++ b/votingGame/templates/votingGame/cTreatmentVote.html
@@ -8,14 +8,18 @@
 
 {% block content %}
     {% blocktrans %}
-        In your group, the decision about how to spent the 10 Zloty per student is made in majority voting.
-        The option that receives the absolute majority of votes is chosen and the 10 Zloty of every
-        group member is spent on this option. If no absolute majority is reached in the first voting round,
-        there will be a second round of voting. <br>
-        Note that the decision now has real-life consequences. <br>
-        The decision reached in your group will be executed. <br>
-        <br> Now please cast your vote: <br>
-        What should the 10 Zloty per member of your group be spent on?
+    In your group, the decision about how to spent the 10-15 Zloty per student is made in majority voting. <br><br>
+
+    The option that receives the absolute majority of votes is chosen and the 10-15 Zloty of every group member is
+    spent on this option. In case there is no majority, the two options that receive most votes will enter
+    a run-off election. In the unlikely case of a tie, one of the two options is chosen at random.<br><br>
+
+    Note: <b>The decision now has real-life consequences.</b> The decision reached in your group will be executed.
+    <b>For every student participating in your group, 10-15 Zloty per person will be spent on the option
+    that receives the majority.</b><br>
+    Now please cast your vote.<br><br>
+
+    What should the 10-15 Zloty per member of your group be spent on?<br><br>
 
     {% endblocktrans %}
     {% formfields %}
