--- a/presurvey/templates/presurvey/bIdRequest.html
+++ b/presurvey/templates/presurvey/bIdRequest.html
@@ -15,7 +15,7 @@
     {% formfields %}
 
     {% blocktrans %}
-        Please keep the card. You need it to collect the payoff of the experiment.<br>
+        Please keep the card. You need it to collect the payoff of the experiment.<br><br>
         We use this card rather to guarantee anonymity. We will not ask for your name or any other
         information that enables us to connect your behavior in this experiment to your true identity.
     {% endblocktrans %}
