--- a/presurvey/templates/presurvey/fAttitudes.html
+++ b/presurvey/templates/presurvey/fAttitudes.html
@@ -9,16 +9,17 @@
 {% block content %}
     {% blocktrans %}
         The philosopher Immanuel Kant (1724-1804) proposed the well-known Categorical Imperative: An
-        individual shall “[…] act only on that maxim through which you can at the same time will that it
-        should become a universal law.” (Kant, 1907: 88).<br>
+        individual shall <i>“[…] act only on that maxim through which you can at the same time will that it
+        should become a universal law.”</i> (Kant, 1907: 88), meaning that you should act a certain way only if
+        you’re willing to have everyone else act the same way too. <br>
 
         <br><b>What do you think. To what degree should people follow this guideline when making decisions in their
-    everyday life?</b>
+        everyday life?</b>
     {% endblocktrans %}
 
         <table class="table">
             <tr>
-                <th width="5%" style="padding-left: 0px; text-align: center;">{% blocktrans %}Not at all{% endblocktrans %}</th>
+                <th width="5%" style="padding-left: 0px; text-align: center;">{% blocktrans %}Never follow it{% endblocktrans %}</th>
                 <th width="5%" style="padding-left: 0px; text-align: center;"></th>
                 <th width="5%" style="padding-left: 0px; text-align: center;"></th>
                 <th width="5%" style="padding-left: 0px; text-align: center;"></th>
@@ -27,7 +28,7 @@
                 <th width="5%" style="padding-left: 0px; text-align: center;"></th>
                 <th width="5%" style="padding-left: 0px; text-align: center;"></th>
                 <th width="5%" style="padding-left: 0px; text-align: center;"></th>
-                <th width="5%" style="padding-left: 0px; text-align: center;">{% blocktrans %}Absolutely{% endblocktrans %}</th>
+                <th width="5%" style="padding-left: 0px; text-align: center;">{% blocktrans %}Always follow it{% endblocktrans %}</th>
             </tr>
             <tr>
                 {% for choice in form.subjectAttiKant %}
@@ -45,10 +46,10 @@
         <table class="table">
             <tr>
                 <th width="15%" style="padding-right: 50px;"> </th>
-                <th width="5%" style="padding-left: 0px; text-align: center;">{% blocktrans %}Not at all{% endblocktrans %}</th>
-                <th width="5%" style="padding-left: 0px; text-align: center;"></th>
-                <th width="5%" style="padding-left: 0px; text-align: center;"></th>
-                <th width="5%" style="padding-left: 0px; text-align: center;">{% blocktrans %}Absolutely{% endblocktrans %}</th>
+                <th width="5%" style="padding-left: 0px; text-align: center;">{% blocktrans %}No Trust{% endblocktrans %}</th>
+                <th width="5%" style="padding-left: 0px; text-align: center;">{% blocktrans %}Little Trust{% endblocktrans %}</th>
+                <th width="5%" style="padding-left: 0px; text-align: center;">{% blocktrans %}Much Trust{% endblocktrans %}</th>
+                <th width="5%" style="padding-left: 0px; text-align: center;">{% blocktrans %}Very Much Trust{% endblocktrans %}</th>
             </tr>
             <tr>
                 <td>{{ form.subjectAttiTrustOther.label }}</td>
