--- a/votingGame/templates/votingGame/dTreatmentPresident.html
+++ b/votingGame/templates/votingGame/dTreatmentPresident.html
@@ -3,15 +3,30 @@
 {% load otree  i18n %}
 
 {% block title %}
-    {% trans "President" %}
+    {% trans "President Decision" %}
 {% endblock %}
 
 {% block content %}
     {% blocktrans %}
-        For the 10 Zloty assigned to your group, we asked the vice-president of the student council at the
-        Poznan University of Economics to make the decision.<br>
-        <br>Vice-President Name Surname decided as follows:<br>
-        The 10 Zloty of every group member is spent on the option ______________<br>
+For the 10-15 Zloty per student in your group, we asked <i>Wiktoria Walkowiak</i> <b>the president</b> of the student council
+        at your university to make the decision on what the money is spent.
+        These were the options:<br><br>
+        <ul>
+            <li> A presentation by Marek Zmysłowski, Polish-born entrepreneur and co-founder of Rocket Internet,
+                RTB House, OLX and GLOVO and author of the bestseller "Chasing Black Unicorns." </li><br>
+            <li> Access to a collection of important standard textbooks as ebooks accessible to all students
+                when logged in to the university WiFi.  </li><br>
+            <li> A number of scholarships (600-800 Zloty per student) for study abroad or internship abroad outside
+                of funded programs (so-called free mover). </li><br>
+            <li> Financial support of selected Study Circles to support their activities,
+                among others publications and conferences. </li><br>
+        </ul>
+        <br>The president <i>Wiktoria Walkowiak</i> decided as follows<br>
+        For every member of your group, 10-15 Zloty are spent on the following option:<br><br>
+
+        <b>A number of scholarships (600-800 Zloty per student) for study abroad or internship abroad
+            outside of funded programs (so-called free mover).</b>
+
 
     {% endblocktrans %}
     {% formfields %}
