--- a/votingGame/templates/votingGame/cVoteResult2.html
+++ b/votingGame/templates/votingGame/cVoteResult2.html
@@ -12,7 +12,7 @@
             {% blocktrans %}
                 Your group reached the following decision by majority voting.<br>
 
-                The 10 Zloty of every group member is spent on the option:
+                For every member of your group, 10-15 Zloty are spent on the following option:
             {% endblocktrans %}
                 <b>{{ vote_final_result_label }}</b>
         {% else %}
