--- a/postsurvey/templates/postsurvey/aPanas.html
+++ b/postsurvey/templates/postsurvey/aPanas.html
@@ -3,7 +3,7 @@
 {% load otree  i18n %}
 
 {% block title %}
- {% trans "How do you feel at this moment ?" %}
+ {% trans "How do you feel at <b>this moment</b> ?" %}
 {% endblock %}
 
 {% block content %}
