change image and text of the coin head and tail to fit with Polish context

--- a/mindgame/templates/mindgame/bDecision.html
+++ b/mindgame/templates/mindgame/bDecision.html
@@ -86,10 +86,10 @@
     <div class="coin-container">
         <div class="coin" id="coin">
             <div class="heads">
-                <img src="{% static 'oNn.svg' %}" alt="uszkodzony obraz, skontaktuj się z eksperymentatorem">
+                <img src="{% static 'oNn.jpg' %}" alt="uszkodzony obraz, skontaktuj się z eksperymentatorem">
             </div>
             <div class="tails">
-                <img src="{% static 'oN5.svg' %}" alt="uszkodzony obraz, skontaktuj się z eksperymentatorem">
+                <img src="{% static 'oN5.jpg' %}" alt="uszkodzony obraz, skontaktuj się z eksperymentatorem">
             </div>
         </div>
         <div class="buttons">
