first major text change

--- a/presurvey/templates/presurvey/aWelcome.html
+++ b/presurvey/templates/presurvey/aWelcome.html
@@ -9,7 +9,7 @@
 {% block content %}
     {% blocktrans %}
         Today, we invite you to take part in an economic experiment. The experiment is part of a research
-        project of doctoral students at the Poznan University of Economics and Business. In total,
+        project of doctoral students at the Poznan University of Economics and Business (PUEB). In total,
         approximately 500-600 students will participate. All sessions will take place in December 2022.<br>
 
         <br>By participating in this experiment, you support their research.<br>
@@ -17,8 +17,7 @@
         The experiment will take about <b>20 minutes</b>.<br>
         Every participant who takes part and answers all questions receives a <b>show-up fee of 5 Zloty</b>.<br>
         In addition, there is the <b>chance to earn another 5 Zloty</b> during the experiment.<br>
-        The outcome of the experiment has an impact on the study conditions at the Poznan University of
-        Economics and Business.<br>
+        The outcome of the experiment has an impact on the study conditions at PUEB.<br>
 
         <br><strong>Please do not talk to your fellow students during the experiment.</strong>
     {% endblocktrans %}
