--- a/presurvey/templates/presurvey/dHypoEx1.html
+++ b/presurvey/templates/presurvey/dHypoEx1.html
@@ -8,19 +8,14 @@
 
 {% block content %}
     {% blocktrans %}
-        Assume that the university provided every student at Poznan University of Economics and Business with 15 Zloty.
+        Assume that the university provided every student at PUEB with 15 Zloty.
         This money is earmarked for improving study conditions at this university.
         It can be spent on the following options:<br>
     <br>
-    (I)     A series of presentations by well-known entrepreneurs, among them Marek Zmysłowski,
-            Polish-born entrepreneur and co-founder of Rocket Internet, RTB House, OLX and GLOVO and author of
-            the bestseller "Chasing Black Unicorns."<br><br>
-    (II)    Access to a collection of important standard textbooks as ebooks accessible to all
-            students when logged in to the university WiFi. <br><br>
-    (III)   A number of scholarships (600-800 Zloty per student) for study abroad or internship
-            abroad outside of funded programs (so-called free mover).<br><br>
-    (IV)	Financial support of selected Study Circles to support their activities,
-            among others publications and conferences. <br><br>
+    (I)     A series of presentations by well-known Polish-born entrepreneurs<br><br>
+    (II)    Online access to important standard textbooks as ebooks via university WiFi. <br><br>
+    (III)   Scholarships (600-800 Zloty per student) for study or internships abroad.<br><br>
+    (IV)	Financial support for Study Circles at PUEB. <br><br>
 
 <br><b>How should this money be distributed (in percentage?)</b><br>
 
