--- a/votingGame/templates/votingGame/dTreatmentPresident.html
+++ b/votingGame/templates/votingGame/dTreatmentPresident.html
@@ -8,26 +8,23 @@
 
 {% block content %}
     {% blocktrans %}
-For the 10-15 Zloty per student in your group, we asked <i>Wiktoria Walkowiak</i> <b>the president</b> of the student council
+    For the 10-15 Zloty per student in your group, we asked <i>Wiktoria Walkowiak</i> <b>the president</b> of the student council
         at your university to make the decision on what the money is spent.
         These were the options:<br><br>
         <ul>
             <li> A presentation by Marek Zmysłowski, Polish-born entrepreneur and co-founder of Rocket Internet,
-                RTB House, OLX and GLOVO and author of the bestseller "Chasing Black Unicorns." </li><br>
-            <li> Access to a collection of important standard textbooks as ebooks accessible to all students
-                when logged in to the university WiFi.  </li><br>
-            <li> A number of scholarships (600-800 Zloty per student) for study abroad or internship abroad outside
-                of funded programs (so-called free mover). </li><br>
-            <li> Financial support of selected Study Circles to support their activities,
-                among others publications and conferences. </li><br>
+                RTB House, OLX and GLOVO. </li><br>
+            <li> Online access to important standard textbooks via university WiFi. </li><br>
+            <li> Scholarships (600-800 Zloty per student) for study or internship abroad outside of funded programs. </li><br>
+            <li> Financial support of selected Study Circles (e.g. for publications or conferences). </li><br>
         </ul>
         <br>The president <i>Wiktoria Walkowiak</i> decided as follows<br>
         For every member of your group, 10-15 Zloty are spent on the following option:<br><br>
 
-        <b>A number of scholarships (600-800 Zloty per student) for study abroad or internship abroad
-            outside of funded programs (so-called free mover).</b>
+        <b>Scholarships (600-800 Zloty per student) for study or internship abroad outside of funded programs.</b>
 
-
+    Note: <b>The decision now has real-life consequences. For every student participating in your group,
+    10-15 Zloty per person will be spent on the option named above.</b>
     {% endblocktrans %}
     {% formfields %}
     <br>
