--- a/votingGame/templates/votingGame/aIntro.html
+++ b/votingGame/templates/votingGame/aIntro.html
@@ -12,15 +12,14 @@
         This money is earmarked for improving study conditions at the PUEB.
         It can be spent on the following options:<br><br>
         <ul>
-            <li> A presentation by Marek Zmysłowski, Polish-born entrepreneur and co-founder of Rocket Internet,
-                RTB House, OLX and GLOVO. </li><br>
-            <li> Online access to important standard textbooks via university WiFi. </li><br>
-            <li> Scholarships (600-800 Zloty per student) for study or internship abroad outside of funded programs. </li><br>
-            <li> Financial support of selected Study Circles (e.g. for publications or conferences). </li><br>
+            <li> Additional funds for the annual competition for the best master's or bachelor's thesis </li><br>
+            <li> Scholarships (800-1000 Zloty per student) for study or internships abroad  </li><br>
+            <li> Online Access to important standard textbooks via university WiFi </li><br>
+            <li> Financial support for selected Study Circles </li><br>
         </ul>
         The question is: <b>What should the 10-15 Zloty per student be spent on?</b><br><br>
 
-        We randomly divided all participants in today’s experiments into two groups of about equal size. <br>
+        We randomly divided all participants in today’s experiments into 3 groups of about equal size. <br>
         <b>Please do not communicate with each other when answering the upcoming questions.</b><br>
         If you have problem, please raise your hand so the experimenter can help you.<br>
 
