--- a/presurvey/templates/presurvey/bIdRequest.html
+++ b/presurvey/templates/presurvey/bIdRequest.html
@@ -3,20 +3,14 @@
 {% load otree  i18n %}
 
 {% block title %}
-    {% trans "Identify Yourself" %}
+    {% trans "PLEASE KEEP THE QR CODE" %}
 {% endblock %}
 
 {% block content %}
-    {% blocktrans %}
-        Please enter the Identification number on the card we just gave you. This is your unique identifier.
-    {% endblocktrans %}
-    <br>
-
-    {% formfields %}
 
     {% blocktrans %}
-        Please keep the card. You need it to collect the payoff of the experiment.<br><br>
-        We use this card rather to guarantee anonymity. We will not ask for your name or any other
+        Please keep the strip with the QR-code we just gave you. You need it to collect the payoff.<br><br>
+        We use this strip rather to guarantee anonymity. We will not ask for your name or any other
         information that enables us to connect your behavior in this experiment to your true identity.
     {% endblocktrans %}
 
