--- a/presurvey/templates/presurvey/dHypoEx1.html
+++ b/presurvey/templates/presurvey/dHypoEx1.html
@@ -12,10 +12,10 @@
         This money is earmarked for improving study conditions at this university.
         It can be spent on the following options:<br>
     <br>
-    (I)     A series of presentations by well-known Polish-born entrepreneurs<br><br>
-    (II)    Online access to important standard textbooks as ebooks via university WiFi. <br><br>
-    (III)   Scholarships (600-800 Zloty per student) for study or internships abroad.<br><br>
-    (IV)	Financial support for Study Circles at PUEB. <br><br>
+    (I)     Additional funds for the annual competition for the best master&#39;s or bachelor&#39;s thesis<br><br>
+    (II)    Scholarships (800-1000 Zloty per student) for study or internships abroad. <br><br>
+    (III)   Online Access to important standard textbooks via university WiFi.<br><br>
+    (IV)	Financial support for selected Study Circles. <br><br>
 
 <br><b>How should this money be distributed (in percentage?)</b><br>
 
