--- a/votingGame/templates/votingGame/dTreatmentPresident.html
+++ b/votingGame/templates/votingGame/dTreatmentPresident.html
@@ -12,16 +12,15 @@
         at your university to make the decision on what the money is spent.
         These were the options:<br><br>
         <ul>
-            <li> A presentation by Marek Zmysłowski, Polish-born entrepreneur and co-founder of Rocket Internet,
-                RTB House, OLX and GLOVO. </li><br>
-            <li> Online access to important standard textbooks via university WiFi. </li><br>
-            <li> Scholarships (600-800 Zloty per student) for study or internship abroad outside of funded programs. </li><br>
-            <li> Financial support of selected Study Circles (e.g. for publications or conferences). </li><br>
+            <li> Additional funds for the annual competition for the best master's or bachelor's thesis </li><br>
+            <li> Scholarships (800-1000 Zloty per student) for study or internships abroad  </li><br>
+            <li> Online Access to important standard textbooks via university WiFi </li><br>
+            <li> Financial support for selected Study Circles </li><br>
         </ul>
         <br>The president <i>Wiktoria Walkowiak</i> decided as follows<br>
         For every member of your group, 10-15 Zloty are spent on the following option:<br><br>
 
-        <b>Scholarships (600-800 Zloty per student) for study or internship abroad outside of funded programs.</b>
+        <b>Scholarships (800-1000 Zloty per student) for study or internships abroad</b><br><br>
 
     Note: <b>The decision now has real-life consequences. For every student participating in your group,
     10-15 Zloty per person will be spent on the option named above.</b>
