fix president treatment instructions to vice president

--- a/votingGame/templates/votingGame/dTreatmentPresident.html
+++ b/votingGame/templates/votingGame/dTreatmentPresident.html
@@ -8,7 +8,7 @@
 
 {% block content %}
     {% blocktrans %}
-    For the 10-15 Zloty per student in your group, we asked <i>Wiktoria Walkowiak</i> <b>the president</b> of the student council
+    For the 10-15 Zloty per student in your group, we asked <i>Aleksandra Matusiak</i> <b>the vice president</b> of the student council
         at your university to make the decision on what the money is spent.
         These were the options:<br><br>
         <ul>
@@ -17,7 +17,7 @@
             <li> Online Access to important standard textbooks via university WiFi </li><br>
             <li> Financial support for selected Study Circles </li><br>
         </ul>
-        <br>The president <i>Wiktoria Walkowiak</i> decided as follows<br>
+        <br>The vice president <i>Aleksandra Matusiak</i> decided as follows<br>
         For every member of your group, 10-15 Zloty are spent on the following option:<br><br>
 
         <b>Scholarships (800-1000 Zloty per student) for study or internships abroad</b><br><br>
