fix title on vice president instruction

--- a/votingGame/templates/votingGame/dTreatmentPresident.html
+++ b/votingGame/templates/votingGame/dTreatmentPresident.html
@@ -3,7 +3,7 @@
 {% load otree  i18n %}
 
 {% block title %}
-    {% trans "President Decision" %}
+    {% trans "Vice President Decision" %}
 {% endblock %}
 
 {% block content %}
