minor changes in instructions, bold and change voting questions to radio buttons

--- a/votingGame/templates/votingGame/cVoteResult.html
+++ b/votingGame/templates/votingGame/cVoteResult.html
@@ -10,7 +10,7 @@
 
     {% if vote_final_result %}
         {% blocktrans %}
-            Your group reached the following decision by majority voting.<br>
+            <b>Your group reached the following decision by majority voting.</b><br>
 
             For every member of your group, 10-15 Zloty are spent on the following option:
         {% endblocktrans %}
