--- a/votingGame/templates/votingGame/eTreatmentDictator.html
+++ b/votingGame/templates/votingGame/eTreatmentDictator.html
@@ -13,7 +13,7 @@
 
         One member from your group will be selected randomly. The 10-15 Zloty of every group member is spent
         on the option proposed by this randomly selected member.
-        The proposals of all other group members will be ignored. <br><br>
+        <b>The proposals of all other group members will be ignored.</b> <br><br>
 
         Note: <b>The decision now has real-life consequences</b>.
         The decision reached in your group will be executed. <b>For every student participating in your group,
