--- a/votingGame/templates/votingGame/eTreatmentDictatorResult.html
+++ b/votingGame/templates/votingGame/eTreatmentDictatorResult.html
@@ -9,7 +9,7 @@
 {% block content %}
 
     {% blocktrans %}
-        The randomly chosen group member decided as follows.<br>
+        <b>The randomly chosen group member decided as follows (the proposals of all other group members were ignored).</b><br>
 
         For every member of your group, 10-15 Zloty are spent on the following option:
     {% endblocktrans %}
