update polish translation and change all buttons to polish

--- a/mindgame/templates/mindgame/a0TestCoin.html
+++ b/mindgame/templates/mindgame/a0TestCoin.html
@@ -108,7 +108,7 @@
         <p> <b>Can you see the coin and flip it by clicking "Flip Coin"? </b></p>
     {% endblocktrans %}
     {% formfield player.subjectIsWorkingCoin %}
-    {% next_button %}
+    <button>Następny</button>
 
 {% endblock %}
 {# ****************************************************************************************************************** #}
