--- a/mindgame/templates/mindgame/aInstructions.html
+++ b/mindgame/templates/mindgame/aInstructions.html
@@ -11,7 +11,7 @@
         <p>
             A few minutes ago, you were informed that 10 -15 Zloty per member in your group will be spent on
             the following option:<br><br>
-            <i>{{last_vote_result}}</i><br><br>
+            <b><i>{{last_vote_result}}</i></b><br><br>
             The exact amount of money spent this way depends on your performance in the upcoming coinflip task. <br>
 
             <br>The task involves predicting coin flips. The results of this coin flip determine the amount of Zloty
@@ -43,6 +43,6 @@
 
     {% endblocktrans %}
 
-    {% next_button %}
+    <button>Następny</button>
 
 {% endblock %}
