--- a/mindgame/templates/mindgame/bDecisionText.html
+++ b/mindgame/templates/mindgame/bDecisionText.html
@@ -103,7 +103,7 @@
 
     {% formfield player.subjectReport %}
     <input type="hidden" name="subjectClickSeq" id="subjectClickSeq" value="Init"/>
-    {% next_button %}
+    <button>Następny</button>
 
 {% endblock %}
 {# ****************************************************************************************************************** #}
