--- a/presurvey/templates/presurvey/aWelcome.html
+++ b/presurvey/templates/presurvey/aWelcome.html
@@ -22,7 +22,7 @@
         <br><strong>Please do not talk to your fellow students during the experiment.</strong>
     {% endblocktrans %}
 
-
-    {% next_button %}
+    <br>
+    <button>Następny</button>
 
 {% endblock %}
