--- a/presurvey/templates/presurvey/bIdRequest.html
+++ b/presurvey/templates/presurvey/bIdRequest.html
@@ -14,6 +14,6 @@
         information that enables us to connect your behavior in this experiment to your true identity.
     {% endblocktrans %}
 
-    {% next_button %}
+    <button>Następny</button>
 
 {% endblock %}
