--- a/presurvey/templates/presurvey/dHypoEx1.html
+++ b/presurvey/templates/presurvey/dHypoEx1.html
@@ -29,7 +29,7 @@ You only need to fill in the number <b>without</b> the percentage sign "%".
     {% formfields %}
     <br>
 
-    {% next_button %}
+    <button>Następny</button>
 
 {% endblock %}
 
