--- a/mindgame/templates/mindgame/bDecision.html
+++ b/mindgame/templates/mindgame/bDecision.html
@@ -109,7 +109,7 @@
 
     {% formfield player.subjectReport %}
     <input type="hidden" name="subjectClickSeq" id="subjectClickSeq" value="Init"/>
-    {% next_button %}
+    <button>Następny</button>
 
 {% endblock %}
 {# ****************************************************************************************************************** #}
