--- a/votingGame/templates/votingGame/cTreatmentVote2.html
+++ b/votingGame/templates/votingGame/cTreatmentVote2.html
@@ -3,7 +3,7 @@
 {% load otree  i18n %}
 
 {% block title %}
-    {% trans "Please answer the following questions" %}
+    {% trans "Majority Voting" %}
 {% endblock %}
 
 {% block content %}
