add short summary words to distribution page

--- a/presurvey/templates/presurvey/dHypoEx1.html
+++ b/presurvey/templates/presurvey/dHypoEx1.html
@@ -25,8 +25,11 @@
 You only need to fill in the number <b>without</b> the percentage sign "%".
     {% endblocktrans %}
     <br>
-
-    {% formfields %}
+    <br>
+    {% formfield 'disI' %}
+    {% formfield 'disII' %}
+    {% formfield 'disIII' %}
+    {% formfield 'disIV' %}
     <br>
 
     <button>Następny</button>
